crates/plotnik-lib/tests/05-typegen/definitions/error_captured_ref_via_recursive_alias.txt
A = (B)
B = {(debugger_statement) (statement_block (A) @x)?}
==== diagnostics ====
error: the referenced definition doesn't match exactly one node, so there is no single node to bind
 --> query.ptk:2:44
  |
1 | A = (B)
  |     --- defined here
2 | B = {(debugger_statement) (statement_block (A) @x)?}
  |                                            ^^^
  |
help: capture nodes inside the definition, or drop this capture
